# dynamicoreTest

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: design-decisions.md  er-diagram.md  evaluation-checklist.md
migrations/: env.py
migrations/versions/: 20260610_0001_initial_schema.py
postman/: dynamicore-wallet-credit-api.postman_collection.json
scripts/: reset_local_db.sh  validate_schema.sh
sql/: 001_schema.sql  002_functions_triggers.sql  003_reports.sql  004_seed.sql
src/dynamicore_wallet_credit_api/: __init__.py  app.py  main.py
src/dynamicore_wallet_credit_api/api/: auth.py  credits.py  dependencies.py  health.py  transactions.py  wallets.py
src/dynamicore_wallet_credit_api/core/: config.py  rate_limit.py  security.py
src/dynamicore_wallet_credit_api/db/: connection.py
src/dynamicore_wallet_credit_api/modules/auth/: schemas.py  service.py
src/dynamicore_wallet_credit_api/modules/credits/: schemas.py  service.py
src/dynamicore_wallet_credit_api/modules/transactions/: __init__.py  schemas.py  service.py
src/dynamicore_wallet_credit_api/modules/wallets/: __init__.py  schemas.py  service.py
tests/: test_auth.py  test_concurrency.py  test_credits.py  test_health.py  test_rate_limit.py  test_transactions.py  test_wallets.py
