[project]
name = "dynamicore-wallet-credit-api"
version = "0.1.0"
description = "FastAPI backend for a wallet and credit platform technical assessment."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
dynamicore-api = "dynamicore_wallet_credit_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "httpx2>=2.3.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
